fix: improve classification pipeline and database handling
- Fixed clustering configuration issues
- Adjusted imports for proper module recognition in scripts and notebooks
- Fixed database query issues

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ classification/results
 tutorials/.ipynb_checkpoints/
 log.txt
 
+# Ignore all generated plots and images in classification/examples/
+classification/examples/**/*.pdf
+classification/examples/**/*.png
+
 ### Default .gitignore file for Python projects
 
 # Environments
