--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,7 @@ igraph==0.11.8
 sphinx-autoapi==3.4.0
 sphinx-js==4.0.0
 sphinx-rtd-theme==3.0.2
+geoalchemy2==0.17.1
+scikit-learn==1.6.1
+scikit-learn-extra==0.3.0
+factor-analyzer==0.5.1
