--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,11 @@ classification/results
 tutorials/.ipynb_checkpoints/
 log.txt
 
-# Ignore all generated plots and images in classification/examples/
+# Ignore all Jupyter notebooks and generated plots and images in classification/examples/
+classification/examples/**/*.ipynb
 classification/examples/**/*.pdf
 classification/examples/**/*.png
+
 
 ### Default .gitignore file for Python projects
 
