--- a/config/config_data.yaml
+++ b/config/config_data.yaml
@@ -6,6 +6,8 @@ PORT: 5432
 PASSWORD: postgres
 TARGET_SCHEMA: public
 
+# Toggles whether the results per plz are analyzed after grid generation (basic parameters, trafo analysis, cable counting)
+ANALYZE_GRIDS: True
 # Toggles whether the grid json files will be saved in a folder or just in the db
 SAVE_GRID_FOLDER: False
 
