--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 ### Chosen directories/files to ignore
 /raw_data/buildings/*
-/raw_data/ways/ways_public_2po_4pgr.sql
+/raw_data/ways/*.sql
 /raw_data/postcode.csv
+/raw_data/transformer_data/fetched_trafos/*
+/raw_data/transformer_data/processed_trafos/*
 src/classification/results
 tutorials/.ipynb_checkpoints/
 log.txt
@@ -19,7 +21,8 @@ classification/examples/**/*.ipynb
 .env
 .venv
 env/
-venv/
+.venv/
+.vscode/
 ENV/
 env.bak/
 venv.bak/
