--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ xlrd==2.0.1
 python-dotenv==1.0.1
 matplotlib==3.10.0
 plotly==5.24.1
+nbformat>=4.2.0
 seaborn==0.13.2
 contextily==1.6.2
 igraph==0.11.8
