--- a/config/config_data.yaml
+++ b/config/config_data.yaml
@@ -12,7 +12,7 @@ ANALYZE_GRIDS: True
 SAVE_GRID_FOLDER: False
 
 # Logging configuration for PgReaderWriter & GridGenerator
-LOG_LEVEL: INFO
+LOG_LEVEL: DEBUG
 LOG_FILE: "log.txt"
 
 # Suffix for the database name
@@ -32,7 +32,7 @@ EPSG: 5070
 REGION:
   STATE: "MA" 
   COUNTY: "Middlesex County" 
-  COUNTY_SUBDIVISION: "Cambridge city"   
+  COUNTY_SUBDIVISION: "TRACT_352900"   
   LOOKUP_URL: https://www2.census.gov/geo/docs/reference/codes/files/national_cousub.txt
 
 # Base output directory
